# xvproc

./: README.md  compile.sh  meson.build  processor  xvprocexe
docks/: ASCII.md  Instruction set.md  UML.excalidraw
examples/: HelloWorld.txt  ParityCheck.txt
source/: core.hpp  main.cpp  memory_module.hpp  utility_units.hpp
